frontend/frontend/src/components/Profile/Profile.css
.maryLouise-container {
    width: 100%;
    position: relative;
    color: black;
    font-size: clamp(var(--fs-sixteen), 1.2vw, var(--fs-eighteen));
    display: flex;
    flex-direction: column;
    align-items: center;
}

.mary-louise-header {
   display: flex;
   gap: 1rem;
   justify-content: space-between;
   

}

.maryLouise-text-wrapper {
    line-height: 1.5;
    text-align: left;
    display: flex;
    flex-direction: column;

}

.maryLouise-text-wrapper > p {
    width: 100%;
}



.maryLouise-text-wrapper, .mary-louise-header {
    width: 100%;
    max-width: 900px;
}

.header-texts {
    max-width: 60%;
    display: flex;
    flex-direction: column;


}

.header-texts > h2 {
    color: var(--bc-lightBlue);
    font-size: var(--fs-fortyEight);
    margin-top: 0;
}



.header-texts > h5 {
    font-size: clamp(var(--fs-sixteen), 1.125vw, var(--fs-eighteen));
    margin-top: 0;
    text-align: left;
    text-wrap: pretty;


}

hr {
    margin: auto 0 1.5rem 0;
    max-width: 170px;
    border: 2px solid var(--bc-lightBlue)
    
}





.mary-louise-image-wrapper {
    background-color: var(--bc-darkBlue);
    aspect-ratio: 1;
    height: auto;
    min-width: 35%;
    display: flex;
    justify-content: center;
    align-items: center;
    
   
}

.mary-louise-image-wrapper > img {
    /* display: block; */

    min-height: 90%;
    aspect-ratio: 1;
    object-fit: cover;
}







/* 1600px */
@media (max-width: 100em) {

    .maryLouise-container {
        padding: min(12vh, 12rem) min(10vw, 10rem);
    }
}

/* 900px */
@media (max-width: 56.25em) {
    .maryLouise-container {
        padding: min(12vh, 12rem) min(5vw, 5rem);
        width: 100%;
        max-width: 1100px;
    }


    .header-texts > h2 {
        margin: 0;
    }

    .header-texts > h5 {
        margin: 0;
        text-align: left;
    }

    .mary-louise-image-wrapper {
        /* width: 100%; */
        min-width: 250px;
        

        
    }
}


/* 600px */
@media (max-width: 37.5em) {
    .maryLouise-container {
        padding: min(5vh, 5rem) min(3vw, 3rem);
    }

    .mary-louise-header {
        display: flex;
        flex-direction: column-reverse;
        gap: 1rem;
        justify-content: left;
    }

    .mary-louise-image-wrapper {
        min-width: 70%;
        align-self: center;
    }

    .header-texts {
        min-width: 100%;
    }

    .header-texts > h2 {
        font-size: clamp(var(--fs-thirtySix), 2.25vw, var(--fs-thirtySix));
        margin-bottom: 1rem
    }

    .header-texts > h5 {
        text-align: left;
    }

    .maryLouise-text-wrapper p {

        margin-block: .5rem;
        
    }

}

@media (max-width: 350px) {
    .maryLouise-text-wrapper p {
        font-size: .9rem;
    }
}

